--- a/jv-respawn-refined.user.css
+++ b/jv-respawn-refined.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           JV Respawn Refined
 @namespace      deboucledjvcom
-@version        1.0.8
+@version        1.0.9
 @description    JV Respawn Refined
 @author         Rand0max
 ==/UserStyle== */
@@ -147,14 +147,16 @@
     font-weight: 600;
   }
 
+  /* Media */
+  @media (max-width: 807.98px) {
+    .topic-list .topic-subject {
+      font-size: 0.9375rem;
+    }
+  }
   @media (min-width: 807.99px) {
     .topic-list .topic-title {
       font-size: 0.72rem;
     }
-  }
-
-  /* Media */
-  @media (min-width: 807.99px) {
     .topic-list .topic-img {
       top: 0.1rem;
       font-size: 1rem;
